# UniChemQCDataProcessing

./: .gitignore  README.md  requirements.txt  unichemqc_config.ini
ImageData/: 2025-12-04_Colosseum-unichemqc-results.csv  2025-12-05_Acropolis-unichemqc-results.csv  2025-12-22_Acropolis-unichemqc-results.csv  2025-12-22_Colosseum-unichemqc-results.csv  2026-02-02_Colosseum-unichemqc-results.csv  2026-02-10_Acropolis-unichemqc-results.csv  2026-02-10_Colosseum-unichemqc-results.csv  2026-02-10_Stonehenge-unichemqc-results.csv  2026-03-19_Acropolis-unichemqc-results.csv  2026-03-19_Colosseum-unichemqc-results.csv  simulation_inputs-USL250973.csv  simulation_inputs.csv
RandD-ImageData/2025-10-31/_results/: 2026-01-06-unichemqc-results.csv  2026-01-07-unichemqc-results.csv
analytics/: extract_sim_inputs.py
input-files/: params.csv  params.xlsx  readme.txt
tests/: test_extract_sim_inputs.py
uniprocessor/: 2025-09-23_unichem_TEST_V2.csv  pyproject.toml  test.txt
uniprocessor/output/: 1e6_bug_rows.html
uniprocessor/src/: constants.py  main.py
uniprocessor/src/classes/: analysis.py  batch.py  ink_channel.py  proc_run.py  report.py  sensor.py  well.py
uniprocessor/tests/test_files/: test_analysis.py  test_batch.py  test_ink_channel.py  test_report.py  test_sensor.py  test_well.py
unireport/: pyproject.toml  styles.txt
unireport/output/: lot_report_20251103J.docx  temp_2025-11-18.csv
unireport/src/: constants.py  main.py
unireport/src/classes/: ink_channel.py  lot.py  report.py  report_run.py  ui.py
