[project]
name = "uniprocessor"
version = "1.0.0"
description = "Responsible for data ingestion, pass/fail analysis, and generation of a tabular results CSV file. Operates passively and automatically as new proc files are generated."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "watchdog[watchmedo]>=4.0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]
